--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -11,10 +11,14 @@
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
+              <title>Bootstrap</title>
+              <path fill-rule="evenodd" clip-rule="evenodd" d="" fill="currentColor"></path>
+          </svg>
         <span class="fs-4">CC Reports</span>
       </a>
 
-      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+      <nav class="d-inline-flex mt-2 mt-md-3 ms-md-auto">
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Главная</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_rep' %}">Среднее значение по дням</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">О нас</a>
