--- a/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Потерянные звонки</h1>
+    <h1>Все потерянные звонки</h1>
     <div class="alert alert-warning mt-2">
         <table border="0", align="center", cellpadding=5>
             <col width="120" valign="top">
