Ver 0.0.4: +Fixed: Pages name

--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -20,9 +20,9 @@
 
       <nav class="d-inline-flex mt-2 mt-md-3 ms-md-auto">
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Главная</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_rep' %}">Среднее значение по дням</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_rep' %}">Звонки за сутки</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'all_call_drop' %}">Все потерянные звонки</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_drop' %}">Потерянные звонки</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_drop' %}">Детализация потеряного звонка</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">О нас</a>
       </nav>
     </div>
