--- a/cc_site/cc_reports/templates/cc_reports/calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_drop.html
@@ -1,11 +1,11 @@
 {% extends 'cc_reports/base.html' %}
 
 {% block title%}
-Страница про нас
+Детализация потеряного звонка
 {% endblock %}
 
 {% block content %}
-    <h1>Потерянные звонки</h1>
+    <h1>Детализация потеряного звонка</h1>
     <div class="alert alert-warning mt-2">
         <table border="0", align="center", cellpadding=5>
             <col width="120" valign="top">
