--- a/cc_site/cc_reports/templates/cc_reports/calls_rep.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_rep.html
@@ -1,11 +1,11 @@
 {% extends 'cc_reports/base.html' %}
 
 {% block title%}
-Страница про нас
+Информация о звонках
 {% endblock %}
 
 {% block content %}
-    <h1>Среднее значение звонков за сутки</h1>
+    <h1>Звонки за сутки</h1>
     <div class="alert alert-warning mt-2">
         <table border="0", align="center", cellpadding=5>
             <col width="150" valign="top">
