--- a/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
@@ -1,7 +1,7 @@
 {% extends 'cc_reports/base.html' %}
 
 {% block title%}
-Страница про нас
+Все потерянные звонки
 {% endblock %}
 
 {% block content %}
