--- a/cc_site/cc_reports/templates/cc_reports/calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_drop.html
@@ -1,7 +1,7 @@
 {% extends 'cc_reports/base.html' %}
 
 {% block title%}
-Детализация потеряного звонка
+{{title}}
 {% endblock %}
 
 {% block content %}
