--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
@@ -23,7 +23,7 @@
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_rep' %}">Звонки за сутки</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'all_call_drop' %}">Все потерянные звонки</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_drop' %}">Детализация потеряного звонка</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">О нас</a>
+<!--        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">О нас</a>-->
       </nav>
     </div>
 
