--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -7,6 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+      <style type="text/css">
+            table {
+             border-collapse: collapse; /* Отображать двойные линии как одинарные */
+            }
+            th {
+             text-align: center; /* Выравнивание по центру */
+            }
+            td, th {
+             border: 1px solid #800; /* Параметры границы */
+             padding: 4px; /* Поля в ячейках */
+            }
+      </style>
 </head>
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
