--- a/cc_site/cc_reports/templates/cc_reports/calls_rep.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_rep.html
@@ -8,12 +8,21 @@
     <h1>{{title}}</h1>
     <div class="alert alert-warning mt-2">
         <table border="0", align="center", cellpadding=5>
+            <tr>
+                <th>Дата<br>(Date)</th>
+                <th>Кол-во вх.звонков<br>(Answered)</th>
+                <th>Ср.время разговора<br>(Av. talking time)</th>
+                <th>Среднее время IVR<br>(Av. IVR time)</th>
+                <th>Ср.время<br>ожидания у оператора<br>(Av.ringing time)</th>
+                <th>Кол-во исх.звонков<br>(Outbound)</th>
+                <th>Кол-во не отв.звонков<br>(Abandoned)</th>
+            </tr>
             <col width="150" valign="top">
             <col width="150" valign="top">
-            <col width="180" valign="top">
-            <col width="180" valign="top">
-            <col width="300" valign="top">
-            <col width="170" valign="top">
+            <col width="200" valign="top">
+            <col width="200" valign="top">
+            <col width="200" valign="top">
+            <col width="190" valign="top">
             <col width="190" valign="top">
             {% for row in reader %}
                 <tr>
