--- a/cc_site/cc_reports/templates/cc_reports/calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_drop.html
@@ -14,6 +14,15 @@
 
     <div class="alert alert-warning mt-2">
         <table border="0", align="center", cellpadding=5>
+                        <tr>
+                <th>Оператор ID</th>
+                <th>Начало вызова</th>
+                <th>Конец вызова</th>
+                <th>Продолжительность вызова</th>
+                <th>Статус вызова</th>
+                <th>Идентификатор вызова</th>
+                <th>Номер абонента</th>
+            </tr>
             <col width="120" valign="top">
             <col width="200" valign="top">
             <col width="200" valign="top">
