Ver 0.0.4: Added: Count canceled calls by Operator

--- a/cc_site/cc_reports/templates/cc_reports/index.html
+++ b/cc_site/cc_reports/templates/cc_reports/index.html
@@ -12,6 +12,7 @@
                 <th>Оператор ID</th>
                 <th>Входящие вызовы</th>
                 <th>Исходящие вызовы</th>
+                <th>Пропущеные вызовы</th>
             </tr>
                 <col width="200" valign="top">
                 <col width="200" valign="top">
