--- a/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
@@ -31,7 +31,7 @@
             {% endfor %}
         </table>
     </div>
-    <div class="pagination">
+    <div class="alert alert-warning mt-2">
         <span class="step-links">
             {% if page_obj.has_previous %}
                 <a href="?page=1">&laquo; first</a>
