--- a/cc_site/cc_reports/templates/cc_reports/index.html
+++ b/cc_site/cc_reports/templates/cc_reports/index.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="alert alert-warning mt-2">
         <center>
-            <b>Общее количество вызовов по операторам</b><br>
+            <h2>Общее количество вызовов по операторам</h2>
         </center>
         <table border="0", align="center", cellpadding=5>
             <tr>
@@ -28,9 +28,10 @@
                 </tr>
             {% endfor %}
         </table>
-        <br>
+    </div>
+    <div class="alert alert-warning mt-2">
         <center>
-            <b>Среднее количество вызовов по дням недели</b><br>
+            <h2>Среднее количество вызовов по дням недели</h2>
         </center>
         <table border="0", align="center", cellpadding=5>
             <tr>
