--- a/cc_site/cc_reports/templates/cc_reports/calls_rep.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_rep.html
@@ -5,8 +5,10 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{title}}</h1>
     <div class="alert alert-warning mt-2">
+        <center>
+            <h2>{{title}}</h2><br>
+        </center>
         <table border="0", align="center", cellpadding=5>
             <tr>
                 <th>Дата<br>(Date)</th>
