Ver 0.0.4: Fixed: Visually

--- a/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/all_calls_drop.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="alert alert-warning mt-2">
         <center>
-            <h2>{{title}}</h2><br>
+            <h2>{{title}}</h2>
         </center>
         <table border="0", align="center", cellpadding=5>
             <tr>
