Ver 0.0.4: Fixed: Table stripped

--- a/cc_site/cc_reports/templates/cc_reports/calls_drop.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_drop.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="alert alert-warning mt-2">
-        <table border="0", align="center", cellpadding=5>
+        <table border="0", align="center", cellpadding=5, class="table table-striped">
             <tr>
                 <th>Оператор ID</th>
                 <th>Начало вызова</th>
