--- a/cc_site/cc_reports/templates/cc_reports/calls_rep.html
+++ b/cc_site/cc_reports/templates/cc_reports/calls_rep.html
@@ -9,7 +9,7 @@
         <center>
             <h2>{{title}}</h2>
         </center>
-        <table border="0", align="center", cellpadding=5>
+        <table border="0", align="center", cellpadding=5, class="table table-striped">
             <tr>
                 <th>Дата<br>(Date)</th>
                 <th>Кол-во вх.звонков<br>(Answered)</th>
