--- a/cc_site/cc_reports/templates/cc_reports/index.html
+++ b/cc_site/cc_reports/templates/cc_reports/index.html
@@ -9,7 +9,7 @@
         <center>
             <h2>Общее количество вызовов по операторам</h2>
         </center>
-        <table border="0", align="center", cellpadding=5>
+        <table border="0", align="center", cellpadding=5, class="table table-striped">
             <tr>
                 <th>Оператор ID</th>
                 <th>Входящие вызовы</th>
@@ -33,7 +33,7 @@
         <center>
             <h2>Среднее количество вызовов по дням недели</h2>
         </center>
-        <table border="0", align="center", cellpadding=5>
+        <table border="0", align="center", cellpadding=5, class="table table-striped">
             <tr>
                 <th>День недели</th>
                 <th>Входящие вызовы</th>
