Ver 0.0.4: Fixed: Text vertically aligned

--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -13,6 +13,7 @@
             }
             th {
              text-align: center; /* Выравнивание по центру */
+             vertical-align: middle;
             }
             td, th {
              border: 0px solid #100; /* Параметры границы */
