--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -19,6 +19,51 @@
              border: 0px solid #100; /* Параметры границы */
              padding: 4px; /* Поля в ячейках */
             }
+
+
+            .highcharts-figure,
+            .highcharts-data-table table {
+                min-width: 360px;
+                max-width: 800px;
+                margin: 1em auto;
+            }
+
+            .highcharts-data-table table {
+                font-family: Verdana, sans-serif;
+                border-collapse: collapse;
+                border: 1px solid #ebebeb;
+                margin: 10px auto;
+                text-align: center;
+                width: 100%;
+                max-width: 500px;
+            }
+
+            .highcharts-data-table caption {
+                padding: 1em 0;
+                font-size: 1.2em;
+                color: #555;
+            }
+
+            .highcharts-data-table th {
+                font-weight: 600;
+                padding: 0.5em;
+            }
+
+            .highcharts-data-table td,
+            .highcharts-data-table th,
+            .highcharts-data-table caption {
+                padding: 0.5em;
+            }
+
+            .highcharts-data-table thead tr,
+            .highcharts-data-table tr:nth-child(even) {
+                background: #f8f8f8;
+            }
+
+            .highcharts-data-table tr:hover {
+                background: #f1f7ff;
+            }
+
       </style>
 </head>
 <body>
@@ -33,10 +78,10 @@
 
       <nav class="d-inline-flex mt-2 mt-md-3 ms-md-auto">
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Главная</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'charts' %}">Графики</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_rep' %}">Звонки по дням</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'all_call_drop' %}">Все потерянные звонки</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_drop' %}">Детализация потеряного звонка</a>
-<!--        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">О нас</a>-->
       </nav>
 
     </div>
