--- a/cc_site/cc_reports/templates/cc_reports/index.html
+++ b/cc_site/cc_reports/templates/cc_reports/index.html
@@ -9,7 +9,7 @@
         <center>
             <h2>Общее количество вызовов по операторам</h2>
         </center>
-        <table border="0", align="center", cellpadding=5, class="table table-striped">
+        <table border="0", align="center", cellpadding=5, class="table table-striped", id="operators_calls_count">
             <tr>
                 <th>Оператор ID</th>
                 <th>Входящие вызовы</th>
