--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -23,8 +23,8 @@
 
             .highcharts-figure,
             .highcharts-data-table table {
-                min-width: 360px;
-                max-width: 800px;
+                min-width: auto;
+                max-width: auto;
                 margin: 1em auto;
             }
 
