Ver 0.0.5: Fixed: Refactored

--- a/cc_site/cc_reports/templates/cc_reports/charts.html
+++ b/cc_site/cc_reports/templates/cc_reports/charts.html
@@ -21,10 +21,10 @@
                 calls_in = [{{ data_calls_in }}]
                 calls_out = [{{ data_calls_out }}]
                 calls_canceled = [{{ data_calls_cancel }}]
-                console.log(operator_id)
-                console.log(calls_in)
-                console.log(calls_in)
-                console.log(calls_canceled)
+<!--                console.log(operator_id)-->
+<!--                console.log(calls_in)-->
+<!--                console.log(calls_in)-->
+<!--                console.log(calls_canceled)-->
                 Highcharts.chart('container', {
                     chart: {
                         type: 'column'
