Ver 0.0.6: Added: Chart calls by day

--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -21,6 +21,12 @@
             }
 
 
+            #container {
+                height: 400px;
+                min-width: 310px;
+            }
+
+
             .highcharts-figure,
             .highcharts-data-table table {
                 min-width: auto;
