--- a/cc_site/cc_reports/templates/cc_reports/charts.html
+++ b/cc_site/cc_reports/templates/cc_reports/charts.html
@@ -51,8 +51,9 @@
                     tooltip: {
                         headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
                         pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-                            '<td style="padding:0"><b>{point.y:.1f} шт</b></td></tr>',
+                                     '<td style="padding:0"><b>{point.y:.1f}</b></td></tr>',
                         footerFormat: '</table>',
+                        valueDecimals: 0,
                         shared: true,
                         useHTML: true
                     },
@@ -106,7 +107,7 @@
                         yAxis: {
                             labels: {
                                 formatter: function () {
-                                    return (this.value > 0 ? ' + ' : '') + this.value + '%';
+                                    return (this.value > 0) + this.value;
                                 }
                             },
                             plotLines: [{
@@ -118,14 +119,14 @@
 
                         plotOptions: {
                             series: {
-                                compare: 'percent',
+                                compare: 'count',
                                 showInNavigator: true
                             }
                         },
 
                         tooltip: {
-                            pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b> ({point.change}%)<br/>',
-                            valueDecimals: 2,
+                            pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b><br/>',
+                            valueDecimals: 0,
                             split: true
                         },
 
