--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -71,12 +71,14 @@
             }
 
       </style>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
-              <title>Bootstrap</title>
+              <title>CC Reports</title>
               <path fill-rule="evenodd" clip-rule="evenodd" d="" fill="currentColor"></path>
           </svg>
         <span class="fs-4">CC Reports</span>
