Ver 1.0.2: Added: Automatic reload page by interval 5 min

--- a/cc_site/cc_reports/templates/cc_reports/all_drop_reg.html
+++ b/cc_site/cc_reports/templates/cc_reports/all_drop_reg.html
@@ -5,6 +5,12 @@
 {% endblock %}
 
 {% block content %}
+    <script type='text/javascript'>
+    function reload_page() {
+      location.reload();
+    }
+    setInterval("reload_page()", 300000);
+    </script>
     <div class="alert alert-warning mt-2">
         <center>
             <h2>{{title}}</h2>
