--- a/cc_site/cc_reports/templates/cc_reports/all_drop_reg.html
+++ b/cc_site/cc_reports/templates/cc_reports/all_drop_reg.html
@@ -13,7 +13,7 @@
     </script>
     <div class="alert alert-warning mt-2">
         <center>
-            <h2>{{title}}</h2>
+            <h2>{{title}} - {{ count_dropped_regs }}</h2>
         </center>
         <table border="0", align="center", cellpadding=5, class="table table-striped">
             <tr>
