Ver 1.0.3: Fixed: Live chat widget setting

--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -110,8 +110,8 @@
              --call-us-agent-text-color:#eeeeee;
              --call-us-form-height:330px;"
          id="wp-live-chat-by-3CX"
-         channel-url="https://192.168.96.70:5001"
-         files-url="https://192.168.96.70:5001"
+         channel-url="http://192.168.96.70:5000"
+         files-url="http://192.168.96.70:5000"
          minimized="true"
          animation-style="slideUp"
          party="click2talk649583"
