--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -129,7 +129,7 @@
          show-operator-actual-name="true"
          channel="phone"
          aknowledge-received="true"
-         gdpr-enabled="false"
+         gdpr-enabled="true"
          gdpr-message="I agree that my personal data to be processed and for the use of cookies in order to engage in a chat processed by COMPANY, for the purpose of Chat/Support for the time of  30 day(s) as per the GDPR."
          message-userinfo-format="both"
          message-dateformat="both"
