Ver 1.0.4: Fixed: Count Dropped registration by Chart

--- a/cc_site/cc_reports/templates/cc_reports/charts.html
+++ b/cc_site/cc_reports/templates/cc_reports/charts.html
@@ -208,7 +208,7 @@
                         }
                     },
                     series: [{
-                        name: 'Пропущеные звонки',
+                        name: 'Незавершенные регистраций',
                         data: drop_regs_count
 
                     }]
