Ver 1.0.5: Added: Check ip information

--- a/cc_site/cc_reports/templates/cc_reports/base.html
+++ b/cc_site/cc_reports/templates/cc_reports/base.html
@@ -91,6 +91,7 @@
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'all_call_drop' %}">Все потерянные звонки</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'call_drop' %}">Детализация потеряного звонка</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'regs_drop' %}">Незавершенные регистрации</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'ip_info' %}">Проверка IP адреса</a>
 
       </nav>
 
