--- a/cc_site/cc_reports/templates/cc_reports/index.html
+++ b/cc_site/cc_reports/templates/cc_reports/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="alert alert-warning mt-2">
         <center>
-            <h2>Среднее количество вызовов по дням недели</h2>
+            <h2>Общие количество вызовов по дням недели</h2>
         </center>
         <table border="0", align="center", cellpadding=5, class="table table-striped">
             <tr>
